--- a/style.css
+++ b/style.css
@@ -406,8 +406,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	font-size: 1rem;
+	font-family: "Open Sans", sans-serif;
 	line-height: 1.5;
 }
 
@@ -417,6 +416,7 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: "Montserrat", sans-serif;
 	clear: both;
 	margin: .75em 0 .25em;
 }
@@ -722,7 +722,11 @@ svg path {
 	}
 
 	.no-sidebar .site,
-	.page-template-full-width .site {
+	.page-template-full-width .site,
+	.page-id-13 .site,
+	.archive .site,
+	.page-id-15 .site,
+	.page-id-7 .site {
 		grid-template-columns: 1fr minmax(0, 1000px) 1fr;
 		grid-template-areas:
 			"header header header"
@@ -976,6 +980,14 @@ svg path {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 2em;
+}
+
+/* About page */
+.page-id-7 main .wp-block-pullquote {
+	border: none;
+	padding: 0;
+	text-align: left;
+	font-size: 1rem;
 }
 
 /* Footer
@@ -1326,3 +1338,19 @@ svg path {
 	}
 }
 */
+
+
+.page-id-13 .home-work .work-wrapper {
+	display: flex;
+	flex-direction: row;
+}
+
+.page-id-13 .home-blog .blog-wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 2rem;
+}
+
+.blog .site-main article {
+	border-bottom: solid 1px #404040;
+}
